# lava

./: README.md  __init__.py  app.py  app_syn.py  app_with_analysis.py  auxillary_code_with_analysis.py  convert_params.py  pickle_0_1001000.p  pickle_0_1002000.p  pickle_0_2001000.p  pickle_0_2002000.p  pickle_0_4001000  pickle_0_4001000.p  pickle_1_1001000.p  pickle_1_1002000.p  pickle_1_2001000.p  pickle_1_4001000  pickle_1_4001000.p  pickle_2_1001000.p  pickle_2_1002000.p  pickle_2_2001000.p  pickle_2_4001000  pickle_2_4001000.p  pyproject.toml  requirements.txt  sim_param_imports.py
