
[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lavanc"
packages = [
    {include = "lava", from = "src"},
]

version = "0.4.0"
description = "A Software Framework for Neuromorphic Computing"
homepage = "https://lava-nc.org/"
repository = "https://github.com/lava-nc/lava"
authors = [ 
    "Intel's Neuromorphic Computing Lab and the open source community <lava@intel.com>"
]
license = "Lava uses multiple licenses and is licensed under BSD-3-Clause or LGPL-2.1-or-later"
keywords = [
    "neuromorphic",
    "neural models",
    "spiking neural networks"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: The 3-Clause BSD License (BSD-3-Clause)",
    "License :: OSI Approved :: GNU Lesser General Public License v2.1 or later (LGPL-2.1-or-later)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"

numpy = "^1.22.2"
scipy = "^1.8.0"
networkx = "<=2.8"
asteval = "^0.9.27"
streamlit = "1.10.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.1"
pandas = "^1.4.2"
bandit = "1.7.2"
darglint = "^1.8.1"
poetry = "^1.1.13"
unittest2 = "^1.1.0"

[tool.black]
line-length = 80
target-versilon = [
    "py39"
]
include = "\\.pyi?$"
exclude = """
(
  /(
      \\.eggs
    | \\.git
    | \\.venv
    | _build
    | build
    | dist
  )/
)
"""

